[#21] Fix extra space between image and text in Card

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,16 +1,15 @@
 .card {
   font-size: var(--base-unit);
-  height: fit-content;
   padding: 0.75em;
 }
 
 .card__image {
-  height: auto;
+  display: block;
   width: 100%;
 }
 
 .card__body {
-  margin: 1em 1em 0.5em;
+  padding: 1em 1em 0.5em;
 }
 
 .card__details {
